PL/Projecto/tests/good/14.nx
var r : int = 10;

foreach i in range(r) do
  print(i);
