PL/Projecto/tests/bad/1.nx
var print : int = 10;
print(print);
